# food-calorie-app

./: .gitignore  AUTHENTICATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README_AUTH_SYSTEM.md  VERIFICATION_CHECKLIST.md  code_viewer.html  create_classes.py  main.py  pyproject.toml  requirements.txt  script_test.js  temp0.js  temp1.js  temp_clarifai.py  test.html  test_api.py  test_stats.py  test_stats2.py
data/: activity_logs.json  audit_logs.json  users.json
static/: auth-guard.js  auth.css  style.css
templates/: add_food.html  admin-dashboard.html  admin.html  calorie_page.html  dashboard.html  foods.html  login.html  signup.html  user-dashboard.html  users.html
